# haskey-btree

./: .gitignore  .travis.yml  LICENSE  README.md  haskey-btree.cabal
src/Data/BTree/: Impure.hs
src/Data/BTree/Alloc/: Class.hs  Debug.hs
src/Data/BTree/Impure/: Delete.hs  Insert.hs  Lookup.hs  NonEmpty.hs
src/Data/BTree/Impure/Internal/: Delete.hs  Fold.hs  Insert.hs  Lookup.hs  Overflow.hs  Setup.hs  Structures.hs
src/Data/BTree/Primitives/: Index.hs  Key.hs  Value.hs
tests/: Integration.hs
tests/Integration/WriteOpenRead/: Debug.hs  Transactions.hs
tests/Properties/Impure/: Fold.hs  Insert.hs  Structures.hs
