name:                haskey-btree
version:             0.2.0.1
synopsis:            B+-tree implementation in Haskell.
description:
    This package provides two B+-tree implementations. The first one is a pure
    B+-tree of a specific order, while the second one is an impure one backed
    by a page allocator.
    .
    For more information on how to use this package, visit
    <https://github.com/haskell-haskey/haskey-btree>
homepage:            https://github.com/haskell-haskey/haskey-btree
license:             BSD3
license-file:        LICENSE
author:              Henri Verroken, Steven Keuchel
maintainer:          steven.keuchel@gmail.com
copyright:           Copyright (c) 2017, Henri Verroken, Steven Keuchel
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:
    Data.BTree.Alloc
    Data.BTree.Alloc.Class
    Data.BTree.Alloc.Debug
    Data.BTree.Impure
    Data.BTree.Impure.Delete
    Data.BTree.Impure.Fold
    Data.BTree.Impure.Insert
    Data.BTree.Impure.Lookup
    Data.BTree.Impure.NonEmpty
    Data.BTree.Impure.Overflow
    Data.BTree.Impure.Setup
    Data.BTree.Impure.Structures
    Data.BTree.Primitives
    Data.BTree.Primitives.Exception
    Data.BTree.Primitives.Height
    Data.BTree.Primitives.Ids
    Data.BTree.Primitives.Index
    Data.BTree.Primitives.Key
    Data.BTree.Primitives.Leaf
    Data.BTree.Primitives.Value
    Data.BTree.Pure
    Data.BTree.Pure.Setup

  other-modules:
    Data.BTree.Utils.List
    Data.BTree.Utils.Map
    Data.BTree.Utils.Vector

  other-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    GADTs
    KindSignatures
    MultiWayIf
    ScopedTypeVariables
    StandaloneDeriving

  build-depends:
    base                    >=4.7  && <5,
    binary                  >=0.6  && <0.9 || >0.9 && <1,
    bytestring              >=0.10 && <1,
    containers              >=0.5  && <1,
    hashable                >=1.2  && <1.3,
    mtl                     >=2.1  && <3,
    semigroups              >=0.12 && <1,
    text                    >=1.2 && <2,
    transformers            >=0.3  && <1,
    vector                  >=0.10 && <1


test-suite haskey-btree-properties
  main-is:             Properties.hs
  type:                exitcode-stdio-1.0
  other-modules:
    Properties.Impure.Fold
    Properties.Impure.Insert
    Properties.Impure.Structures
    Properties.Primitives.Height
    Properties.Primitives.Ids
    Properties.Primitives.Index
    Properties.Primitives.Leaf
    Properties.Pure
    Properties.Utils

  build-depends:
    base          >=4.7  && <5,
    binary        >=0.6  && <0.9 || >0.9 && <1,
    bytestring    >=0.10 && <1,
    containers    >=0.5  && <1,
    data-ordlist  >=0.4  && <1,
    mtl           >=2.1  && <3,
    transformers  >=0.3  && <1,
    vector        >=0.10 && <1,

    HUnit                      >=1.3  && <2,
    QuickCheck                 >=2    && <3,
    test-framework             >=0.8  && <1,
    test-framework-hunit       >=0.3  && <1,
    test-framework-quickcheck2 >=0.3  && <1,
    haskey-btree

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      tests

test-suite haskey-btree-integration
  main-is:             Integration.hs
  type:                exitcode-stdio-1.0
  other-modules:
    Integration.WriteOpenRead.Debug
    Integration.WriteOpenRead.Transactions

  build-depends:
    base          >=4.7  && <5,
    binary        >=0.6  && <0.9 || >0.9 && <1,
    containers    >=0.5  && <1,
    mtl           >=2.1  && <3,
    transformers  >=0.3  && <1,

    QuickCheck    >=2    && <3,
    test-framework             >=0.8  && <1,
    test-framework-quickcheck2 >=0.3  && <1,
    haskey-btree

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      tests

source-repository head
  type:     git
  location: https://github.com/haskell-haskey/haskey-btree
